fix(TabBar): Prevents long tabtext overflow

--- a/app/components/TabBar/tabBar.css
+++ b/app/components/TabBar/tabBar.css
@@ -9,7 +9,9 @@
     font-size: 1.4rem;
     -webkit-app-region: drag;
 }
-
+.tabRow {
+    flex-wrap: nowrap;
+}
 .containerMac {
     padding-top: 10px;
     padding-left: 100px;
